--- a/sites/auto.html
+++ b/sites/auto.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Arch Linux Übersicht</title>
-    <link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
+    <link href="../css/stylesheet.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body class="background">
