--- a/sites/auto.html
+++ b/sites/auto.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Arch Linux Übersicht</title>
+    <title>Auto</title>
     <link href="../css/stylesheet.css" rel="stylesheet" type="text/css" />
 </head>
 
