--- a/sites/xfce.html
+++ b/sites/xfce.html
@@ -16,7 +16,7 @@
             <div class="link"> <a href="../sites/xfce.html">Der Desktop XFCE4</a></div>
             <div class="link"> <a href="../sites/lxde.html">Der Desktop LXDE</a></div>
             <div class="link"> <a href="../sites/mate.html">Der Desktop MATE</a></div>
-            <div class="link"> <a href="../sites/openbox.html">Der Desktop Openbox</a></div>
+            <div class="link"> <a href="../sites/openbox.html">FreeBSD Installation</a></div>
         </div>
 
         <div class="logo"><a href="../index.html"><img src="../img/archlogo.png"></a></div>
