--- a/home/homatic2a.html
+++ b/home/homatic2a.html
@@ -91,6 +91,6 @@ IPv6 Configuration:<br>
 - IPv6 Address: 2001:DB8:ACAD:A::15/64<br>
 - IPv6 Gateway: FE80::2<br>
 - IPv6 DNS Server: 2001:DB8:ACAD:F::5<br>
-  <div class="image"><img src="../home/2a.jpg" width="100%"></div>
+  <div class="image"><img src="../home/2a.jpg"></div>
  </body>
  </html>
