--- a/home/homatic2b.html
+++ b/home/homatic2b.html
@@ -91,5 +91,6 @@ IPv6 Configuration:<br>
 - IPv6 Address: 2001:DB8:ACAD:A::15/64<br>
 - IPv6 Gateway: FE80::2<br>
 - IPv6 DNS Server: 2001:DB8:ACAD:F::5<br>
+  <div class="image"><img src="../home/2b.png"></div>
  </body>
  </html>
