--- a/homes/b.html
+++ b/homes/b.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-CCNA 3 Scaling Networks v6.0 Final Exam Option A<br><br><br><br>
+CCNA 3 Scaling Networks v6.0 Final Exam Option B<br><br><br><br>
     
 01. What is the function of STP in a scalable network?<br>---<br>
 It disables redundant paths to eliminate Layer 2 loops.<br>---<br><br>
