--- a/homes/c.html
+++ b/homes/c.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-CCNA 3 Scaling Networks v6.0 Final Exam Option A<br><br><br><br>
+CCNA 3 Scaling Networks v6.0 Final Exam Option C<br><br><br><br>
     
 01. Which technological factor determines the impact of a failure domain?<br>---<br>
 the role of the malfunctioning device<br>---<br><br>
