--- a/homes/e.html
+++ b/homes/e.html
@@ -233,7 +233,7 @@ priority 2 -> The router uses the highest configured IPv4 address of a loopback 
 priority 3 -> The router uses the highest configured IPv4 address of an active interface.<br>
 priority 4 -> The router displays a console message to configure the router ID manually. <br><br>
 
-CCNA 3 Scaling Networks v6.0 Final Exam Option A<br><br><br>
+CCNA 3 Scaling Networks v6.0 Final Exam Option B<br><br><br>
     
 01. What is the function of STP in a scalable network?<br>---<br>
 It disables redundant paths to eliminate Layer 2 loops.<br>---<br><br>
@@ -458,7 +458,7 @@ priority 2 -> The router uses the highest configured IPv4 address of a loopback 
 priority 3 -> The router uses the highest configured IPv4 address of an active interface.<br>
 priority 4 -> The router displays a console message to configure the router ID manually.<br><br>
 
-CCNA 3 Scaling Networks v6.0 Final Exam Option A<br><br><br>
+CCNA 3 Scaling Networks v6.0 Final Exam Option C<br><br><br>
     
 01. Which technological factor determines the impact of a failure domain?<br>---<br>
 the role of the malfunctioning device<br>---<br><br>
